--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
+    "nuxt-edge": "^2.16.0-27264976.293dc11a",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
