--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,28 +4,34 @@ updates:
 - package-ecosystem: npm
   directory: '/'
   schedule:
-    interval: daily
-    time: '00:00'
-  open-pull-requests-limit: 10
+    interval: weekly
+    day: 'sunday'
+    time: '10:00'
+    timezone: 'Asia/Tokyo'
+  open-pull-requests-limit: 5
   reviewers:
-    - prum
-  assignees:
-    - prum
+    - yasudanaoya
+  labels:
+    - dependencies
   commit-message:
     prefix: fix
     prefix-development: chore
     include: scope
+
 # Fetch and update latest `github-actions` pkgs
 - package-ecosystem: github-actions
   directory: '/'
   schedule:
-    interval: daily
-    time: '00:00'
-  open-pull-requests-limit: 10
+    interval: weekly
+    day: 'sunday'
+    time: '10:00'
+    timezone: 'Asia/Tokyo'
+
+  open-pull-requests-limit: 5
   reviewers:
-    - prum
-  assignees:
-    - prum
+    - yasudanaoya
+  labels:
+    - dependencies
   commit-message:
     prefix: fix
     prefix-development: chore
