--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky install",
     "lint": "yarn lint:js && yarn lint:style",
     "test": "jest",
-    "storybook": "nuxt storybook"
+    "storybook": "nuxt storybook",
+    "build:storybook": "nuxt storybook build"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
