--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "prepare": "husky install",
     "lint": "yarn lint:js && yarn lint:style",
-    "test": "jest"
+    "test": "jest",
+    "generate:component": "hygen generate component"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "hygen": "^6.1.0",
     "nuxt-edge": "latest",
     "vuetify": "^2.5.5"
   },
