--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
+    "storybook": "nuxt storybook",
+    "build:storybook": "nuxt storybook build",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "prepare": "husky install",
     "lint": "yarn lint:js && yarn lint:style",
-    "test": "jest",
-    "storybook": "nuxt storybook",
-    "build:storybook": "nuxt storybook build"
+    "test": "jest"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
