--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,9 @@ updates:
     prefix: fix
     prefix-development: chore
     include: scope
+  ignore:
+    - dependency-name: sass-loader
+      versions: [11.x, 12.x]
 
 # Fetch and update latest `github-actions` pkgs
 - package-ecosystem: github-actions
