--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
-    "storybook": "nuxt storybook",
-    "build:storybook": "nuxt storybook build",
+    "storybook": "start-storybook",
+    "build:storybook": "build-storybook build",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "prepare": "husky install",
@@ -33,9 +33,12 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^7.0.2",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/storybook": "^4.2.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.12.1",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-knobs": "^6.3.1",
+    "@storybook/vue": "^6.3.8",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
