--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
-    "storybook": "start-storybook",
+    "storybook": "start-storybook -p 3003",
     "build:storybook": "build-storybook build",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "prepare": "husky install",
     "lint": "yarn lint:js && yarn lint:style",
     "test": "jest",
+    "snapshot": "jest --updateSnapshot",
     "generate:component": "hygen generate component"
   },
   "lint-staged": {
@@ -35,7 +36,12 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.12.1",
-    "@storybook/vue": "^6.3.8",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-knobs": "^6.3.1",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/vue": "^6.3.12",
+    "@types/jest": "^27.0.2",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
@@ -56,6 +62,7 @@
     "stylelint-config-standard": "^22.0.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.4.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-loader": "^15.9.8"
   }
 }
