--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,11 @@ on:
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - README.md
+      - .github/**
+      - .hygen/**
+      - .husky/**
 
 jobs:
   ci:
