--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-knobs": "^6.3.1",
-    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/vue": "^6.3.12",
+    "@types/big.js": "^6.1.2",
     "@types/jest": "^27.0.2",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
